@@ -1,6 +1,7 @@
 ==2011-02==
+* Implemented shader shadow mask/aperture grille
 * Implemented render to texture by parts
-* Separated shader programs into: NTSC, PAL, video and screen programs
+* Separated shader programs into: RGB, NTSC, PAL and screen programs
 * Implemented Y'IQ decoding with I 1.3 MHz bandwidth and Q 0.6 MHz bandwidth
 * Implemented composite phase per scan-line for NTSC/PAL
 * Implemented removable device property
